# parce

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data_pipelines/: README.md
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: get_seed_dois.py
src/parce/: __init__.py  main.py
src/parce/agent/: __init__.py  base.py  curator.py  extraction.py  prompts.py
src/parce/config/: settings.py
src/parce/graph/: __init__.py  builder.py  merge.py
src/parce/models/: graph_schema.py  narrative.py  raw_record.py
src/parce/normalize/: __init__.py  base.py  cellxgene.py  geo.py
src/parce/ontology/: __init__.py  base.py  cache.py  layers.py  ols.py  registry.py  resolver.py
src/parce/sources/: __init__.py  _retry.py  base.py  cellxgene.py  geo.py  publication.py
src/parce/tools/: cellxgene_fetcher.py  geo_fetcher.py  ncbi_fetcher.py
tests/: test_builder.py  test_cellxgene_integration.py  test_geo_adapter.py  test_geo_integration.py  test_geo_normalize.py  test_graph_merge.py  test_graph_schema.py  test_integration.py  test_models.py  test_ncbi_fetcher.py  test_normalize.py  test_ontology_cache.py  test_ontology_integration.py  test_ontology_layers.py  test_ontology_ols.py  test_ontology_registry.py  test_ontology_resolver.py  test_orchestration.py  test_publication.py  test_retry.py  test_sources.py
